Fixed order of pages

--- a/views/login.pug
+++ b/views/login.pug
@@ -11,4 +11,4 @@ html
                 input(type="text")
                 span Password:
                 input(type="text")
-                a(href="auth/google").logInButton Log in!
+                a(href="/main").logInButton Log in!
