--- a/assets/style.css
+++ b/assets/style.css
@@ -17,18 +17,20 @@
     min-width: 100vw;
 }
 
-.loginForm {
+.instruction {
+    font-size: 24px;
+    font-style: italic;
+    margin: 20px 0;
+}
+
+.box {
+    position: relative;
     display: flex;
     flex-flow: column;
-}
-
-span {
-    margin: 10px 0;
-}
-
-input {
-    height: 30px;
-    width: 200px;
+    text-align: center;
+    padding: 20px;
+    height: 250px;
+    width: 350px;
 }
 
 .title {
@@ -36,10 +38,24 @@ input {
 }
 
 .logInButton {
-    margin-top: 10px;
+    margin: 5px auto;
+    width: 100px;
     text-decoration: none;
-    text-align: right;
-    font-size: 18px;
+    text-align: center;
+    font-size: 24px;
+    border: 1px solid rebeccapurple;
+    border-radius: 6px;
+    padding: 5px;
+    transition: .2s;
+    box-shadow: 2px 3px rebeccapurple;
+}
+
+.logInButton:hover {
+    background: rebeccapurple;
+    color: white;
+    transform: translateY(3px);
+    box-shadow: 0px 0px rebeccapurple;
+    
 }
 
 .welcome {
